--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,19 @@
+body {
+  box-sizing: border-box;
+}
+
 #main-doc {
-  margin-right: 25%;
+  margin-left: 25%;
+  position: relative;
+}
+
+.container {
+  padding: 10px;
+}
+code {
+  color: red;
+}
+h5 {
+  text-decoration: underline;
+  font-style: bold;
 }
