--- a/styles.css
+++ b/styles.css
@@ -1,19 +1,37 @@
 body {
-  box-sizing: border-box;
+  overflow: hidden;
+  color: gray;
 }
 
-#main-doc {
-  margin-left: 25%;
-  position: relative;
+.grid-container {
+  height: 100vh;
+  width: 100vw;
+  display: grid;
+  padding: 0px;
+  grid-gap: 2px;
+  background-color: #2196f3;
 }
 
-.container {
-  padding: 10px;
+#navbar {
+  background-color: rgba(255, 255, 255, 0.8);
+  padding: 20px 0;
+  font-size: 1.5rem;
+  grid-column: 1 / 3;
 }
+
+.nav-link {
+  display: block;
+  padding: 5px;
+}
+
+.content {
+  background-color: rgba(255, 255, 255, 0.8);
+  padding: 20px 0;
+  font-size: 1rem;
+  grid-column: 3 / 11;
+  overflow-y: scroll;
+}
+
 code {
   color: red;
-}
-h5 {
-  text-decoration: underline;
-  font-style: bold;
 }
