--- a/styles.css
+++ b/styles.css
@@ -14,7 +14,7 @@ body {
 
 #navbar {
   background-color: rgba(255, 255, 255, 0.8);
-  padding: 20px 0;
+  padding: 10px;
   font-size: 1.5rem;
   grid-column: 1 / 3;
 }
@@ -22,14 +22,18 @@ body {
 .nav-link {
   display: block;
   padding: 5px;
+  text-decoration: none;
 }
 
 .content {
   background-color: rgba(255, 255, 255, 0.8);
-  padding: 20px 0;
+  padding: 0px 20px;
   font-size: 1rem;
   grid-column: 3 / 11;
   overflow-y: scroll;
+}
+.main-section {
+  text-align: justify;
 }
 
 code {
