--- a/styles.css
+++ b/styles.css
@@ -1,7 +1,7 @@
 body {
   overflow: hidden;
-  color: gray;
-  font-family: "Open Sans", sans-serif;
+  font-family: "Urbanist", sans-serif;
+  color: #f1f3f5bd;
 }
 
 .grid-container {
@@ -10,33 +10,74 @@ body {
   display: grid;
   padding: 0px;
   grid-gap: 2px;
-  background-color: #2196f3;
+  background-color: #144a77b8;
 }
 
 #navbar {
-  background-color: rgba(255, 255, 255, 0.8);
+  background-color: #273043;
   padding: 10px;
-  font-size: 1.5rem;
+  font-size: 1em;
   grid-column: 1 / 3;
 }
 
 .nav-link {
+  color: #b1aebde0;
   display: block;
   padding: 5px;
   text-decoration: none;
 }
+.nav-link:hover {
+  color: white;
+}
+
+a {
+  border-bottom: 1px solid rgba(255, 255, 255, 0.583);
+}
 
 .content {
-  background-color: rgba(255, 255, 255, 0.8);
+  background-color: rgba(255, 255, 255, 0.898);
+  color: #273043;
   padding: 0px 20px;
   font-size: 1rem;
   grid-column: 3 / 11;
   overflow-y: scroll;
 }
+
 .main-section {
   text-align: justify;
 }
 
+header {
+  font-family: "Nunito", sans-serif;
+  font-size: 1.8em;
+  padding-bottom: 5px;
+  border-bottom: 2px solid rgba(0, 0, 0, 0.165);
+}
+
+h4 {
+  margin: 4px 0px;
+}
+h5 {
+  font-size: 1em;
+}
+
+span {
+  font-weight: bold;
+}
+
 code {
-  color: red;
+  color: rgba(237, 8, 8, 0.974);
+  word-wrap: normal;
+  line-height: 2;
+  background-color: #7270701c;
+  border-radius: 5px;
+}
+@media all and (max-width: 700px) {
+  .grid-container {
+    display: block;
+    overflow-y: scroll;
+  }
+  #navbar {
+    text-align: center;
+  }
 }
